feat: run web on phone

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chúc mừng sinh nhật!</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -9,22 +10,17 @@
 
   <div id="birthdayText">🎉 Chúc mừng sinh nhật! 🎂</div>
 
-  <!-- Ảnh chính ở giữa -->
   <div class="photo-container">
     <img id="birthdayImage" src="images/person.jpg" alt="Hình chúc mừng sinh nhật">
   </div>
 
-  <!-- Canvas pháo hoa -->
   <canvas id="fireworks"></canvas>
 
-  <!-- Nút bắt đầu -->
   <button id="startButton">Bấm để bắt đầu 🎵</button>
 
-  <!-- Ảnh 2 bên -->
   <div class="side-image left-side"></div>
   <div class="side-image right-side"></div>
 
-  <!-- Nhạc -->
   <audio id="birthdaySong" loop>
     <source src="audio/happy_birthday.mp3" type="audio/mpeg">
     Trình duyệt của bạn không hỗ trợ phát âm thanh.
