--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chúc mừng sinh nhật!</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
-  <div id="birthdayText">🎉 Chúc mừng sinh nhật Mỹ Anh! 🎂</div>
+  <div id="birthdayText">🎉 Chúc mừng sinh nhật! 🎂</div>
   
   <div id="customWish" style="display: none;">Anh Tuấn: chúc mừng sinh nhật tuổi mới thêm mới thêm dui thêm xuôi thêm ngược, nhiều tiền</div>
   
@@ -24,9 +26,7 @@
     <div class="wish-line" id="wish-line">Hiền: 🎉🎂 CHÚC MỪNG SINH NHẬT BÉ BÔNG SIÊU QUẬY! 🎂🎉</div>
   </div>
 
-  <div id="delayed-wish-container">
-    <div class="wish-line" id="delayed-line"> <!-- Chữ sẽ thay đổi tại đây --> </div>
-  </div>
+  <div id="customWish4" style="display: none;">Bùi Tài: Quên chúc</div>
 
   <div id="wish-anh-thanh-container">
     <div class="wish-line" id="wish-anh-thanh-line"></div>
@@ -62,5 +62,5 @@
   setTimeout(() => {
     const line = document.getElementById("wish-toan-fixed-line");
     line.classList.remove("hidden");
-  }, 145000); // Hiển thị sau 145 giây
+  }, 115500); // 
 </script>
